--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^1.6.0"
+    "@astrojs/preact": "^1.2.0",
+    "@astrojs/rss": "^1.0.3",
+    "astro": "^1.6.0",
+    "preact": "^10.11.3"
   }
 }
