--- a/package.json
+++ b/package.json
@@ -11,9 +11,14 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/image": "^0.13.0",
     "@astrojs/preact": "^1.2.0",
     "@astrojs/rss": "^1.0.3",
-    "astro": "^1.6.0",
-    "preact": "^10.11.3"
+    "astro": "^2.0.2",
+    "preact": "^10.11.3",
+    "sharp": "^0.31.3"
+  },
+  "devDependencies": {
+    "sass": "^1.57.1"
   }
 }
